welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: not found: value a
  a=a/nums.length
  ^averageValue:7: error: not found: value a
  return a
         ^